Fix some minor errors

--- a/commutative/week9.tex
+++ b/commutative/week9.tex
@@ -3,7 +3,7 @@
 
 \subsection{ED, PID and UFD (week 9)}
 
-We shall consider $R$ to be a integral domain below.
+We shall consider $R$ to be an integral domain below.
 \begin{definition}
   A function $N: R \to \Nb$ with $N(0) = 0$ is called a norm on $R$.
 \end{definition}
@@ -259,8 +259,7 @@ Let $p$ be a prime in $\Zb$.
 
     If $p$ is a prime in $\Zb[\omega]$, then $p \mid (a+1+2\omega)$ or $p \mod (a - 1 - 2\omega)$,
     which implies that $p \mid 2$ (since $p \in \Zb$, $p \mid a + b\omega \implies p \mid a, p \mid b$), 
-    which leads to an contradiction,
-    thus $p$ is not a prime.
+    which leads to a contradiction, thus $p$ is not a prime.
 
     Hence $p \neq 3$ is not a prime in $A_{-3}$ $\iff$ $p \equiv 1 \pmod{3}$.
 \end{itemize}
@@ -293,7 +292,7 @@ Let $p$ be a prime in $\Zb$.
     ``$\supset$'':
     Let $\Sc \triangleq \Set{ I : \text{ ideal in } R \given a^n \notin I, \, \forall n \in \Nb}$.
     By the routine argument of Zorn's lemma, exists maximal element $Q$ in $\Sc$.
-    We claim that $\Sc$ is a prime ideal.
+    We claim that $Q$ is a prime ideal.
 
     For each $x, y \notin Q$, we have $Q + Rx \supsetneq Q$ and $Q + Ry \supsetneq Q$.
     By the maximality of $Q$, these two ideals are not in $\Sc$.
@@ -396,7 +395,7 @@ Let $p$ be a prime in $\Zb$.
     Write $I_0 = I_1 \cap I_2$, with $I_1, I_2 \neq I_0$. Then $I_1, I_2 \notin \Ic$,
     so these two ideals could be written as a finite intersection of irreducible ideals,
     implying that $I_0$ could also be written as a finite intersection of irreducible ideals,
-    which is an contradiction.
+    which is a contradiction.
   \end{proof}
 \end{theorem}
 
