--- a/commutative/week10.tex
+++ b/commutative/week10.tex
@@ -3,7 +3,7 @@
 
 In the following, $k$ will be an algebraically closed field.
 \begin{definition}
-  The category of affine algebraic sets $\mathcal{G}$, which its objects and morphisms are defined as following.
+  The category of affine algebraic sets $\mathcal{G}$ and its objects and morphisms are defined as following:
 
   \begin{description}[leftmargin=0cm]
     \item[objects:] The objects are affine algebraic sets in $k^n$.
@@ -34,8 +34,8 @@ In the following, $k$ will be an algebraically closed field.
 \end{definition}
 
 \begin{definition}
-  The category of finitely generated reduced $k$-algebra $\mathcal{A}$,
-  which its objects and morphisms are defined as following.
+  The category of finitely generated reduced $k$-algebra $\mathcal{A}$
+  and its objects and morphisms are defined as following:
 
   \begin{description}
     \item[objects:] The objects are the reduced finitely generated $k$-algebra $R$.
