fix some primary decomposition 好!

--- a/commutative/week9.tex
+++ b/commutative/week9.tex
@@ -475,7 +475,7 @@ And if $q_i \supseteq \bigcap_{j \neq i} q_j$, we could simply remove $q_i$.
     Now, we have the following observation. ``If $p \in \Spec R$ with $p = \bigcap_{i=1}^n J_i$,
     then $p = J_j$ for some $j$.'' If not, then $J_i \not\subset p$ for all $i$,
     so we could pick $x_i \in J_i \setminus p$.
-    But then $x_1 x_2 \dotsm x_n \in \cap J_i \in p$ since $J_i$ are ideals,
+    But then $x_1 x_2 \dotsm x_n \in \cap J_i = p$ since $J_i$ are ideals,
     which leads to a contradiction since $p$ is prime.
 
     So if $\sqrt{(I: x)}$ is a prime, then it is equal to some $p_i$.
